--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap">
         <title>Boye-Ogundiya Ayomide</title>
         <link rel="icon" href="./assets/images/b-logo/white-cutout-48px.png" type="icon/png">
-        <link rel="stylesheet" href="./assets/style/index.css" media="all">
+        <link rel="stylesheet" href="./assets/style/main.css" media="all">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-        <script src="./assets/script/index.js" defer></script>
+        <script src="./assets/script/app.js" type="module"></script>
     </head>
     <body> 
         <header>
@@ -135,7 +135,6 @@
                     <a href="mailto:boyeayomide@gmail.com" title="Email">
                         <input type="button" class="submit" value="Send Message">
                     </a>
-                    
                 </form>
                 <div class="contact-txt">
                     <p style="margin-bottom: 2rem;">
@@ -150,7 +149,6 @@
                                     boyeayomide@gmail.com
                                 </a>
                             </span>
-                            
                         </li>
                         <li>
                             <i class="fa-solid fa-location-dot" style="font-size: 1rem;"></i>
