--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <li>
                                     <i class="fa-solid fa-graduation-cap" style="margin-right: 0em;"></i>
                                     <span>Education: </span>
-                                    <span style="font-weight: lighter;">Manitoba Institute of Trades and Technology</span>
+                                    <span style="font-weight: lighter;">MITT</span>
                                 </li>
                             </ul>
                             <ul>
@@ -116,7 +116,7 @@
                                 <li>
                                     <i class="fa-solid fa-star"></i>
                                     <span>Interests: </span>
-                                    <span style="font-weight: lighter;">Gaming, Watching anime and Programming</span>
+                                    <span style="font-weight: lighter;">Anime lover</span>
                                 </li>
                             </ul>
                         </div>
